fix: Code styling on mobile needs an `overflow: auto`. (#11)

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -16,3 +16,7 @@
 .markdown h3 {
   @apply text-2xl mt-8 mb-4 leading-snug;
 }
+
+.markdown pre {
+  @apply w-full overflow-auto text-sm md:text-base pb-4;
+}
